# insurance_company

./: .gitignore  CMakeLists.txt  README.md  base.h  company.cpp  error.h  game.cpp  game.h  insurance.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  parse.cpp  parse.h  ui_mainwindow.h
server/: CMakeLists.txt  company.h  game.h  insurance.cpp  insurance.h  options.cpp  options.h  parse.cpp
ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
